# ros2_ur5_interface

./: CMakeLists.txt  README.md  package.xml  ros2.sh
bash_scripts/: entrypoint.sh  ros2.sh
config/: ur_controllers.yaml
docker/: Dockerfile
launch/: interface.launch.py  sim.launch.py
models/: block.urdf.xacro  camera.sdf  desk.config  desk.sdf  desk.urdf  desk.urdf.xacro  model.sdf  model.urdf  soft_robotics_gripper.xacro  ur_gz.ros2_control.xacro  ur_gz.urdf.xacro
models/blocks/: model.urdf.xacro
models/blocks/X1-Y1-Z2/: model.sdf  model.urdf.xacro
models/blocks/X1-Y2-Z1/: model.sdf
models/blocks/X1-Y2-Z2/: model.sdf
models/blocks/X1-Y2-Z2-CHAMFER/: model.sdf
models/blocks/X1-Y2-Z2-TWINFILLET/: model.sdf
models/blocks/X1-Y3-Z2/: model.sdf
models/blocks/X1-Y3-Z2-FILLET/: model.sdf
models/blocks/X1-Y4-Z1/: model.sdf
models/blocks/X1-Y4-Z2/: model.sdf
models/blocks/X2-Y2-Z2/: model.sdf
models/blocks/X2-Y2-Z2-FILLET/: model.sdf
params/: ur5_bridge.yaml
rviz/: ur5.rviz
src/: gripper_service.cpp  publish_trajectory_node.cpp
worlds/: empty.world
